{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 223,
  "lineage": "4d1747a2-4fc1-2ce5-ad36-6aea599d13c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo1_app_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7620d611d3ceae4",
            "arn": "arn:aws:ec2:us-east-1:414092415776:instance/i-07a0b4953d2f28d61",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a0b4953d2f28d61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo1_ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0eafb20fd35c2b24e"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eafb20fd35c2b24e",
            "private_dns": "ip-10-0-0-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.100",
            "public_dns": "ec2-3-86-90-211.compute-1.amazonaws.com",
            "public_ip": "3.86.90.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06c1db110f96e50d2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0915bb8579d27228a",
            "tags": {
              "Env": "dev",
              "Name": "demo1_app_server1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_app_server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0557425a96c9a1b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.demo1_ec2_key",
            "aws_network_interface.ec2_nic1_as1",
            "aws_security_group.demo1_app_server_sg",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:internet-gateway/igw-04fd1f45594c24173",
            "id": "igw-04fd1f45594c24173",
            "owner_id": "414092415776",
            "tags": {
              "Env": "dev",
              "Name": "demo1_igw"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_igw"
            },
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "demo1_private_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:network-acl/acl-045b256178e68b502",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/23",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-045b256178e68b502",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/23",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 5432
              }
            ],
            "owner_id": "414092415776",
            "subnet_ids": [
              "subnet-01d1c4670724412cf",
              "subnet-067630acfe51e1e73"
            ],
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_sub_acl"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_sub_acl"
            },
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "demo1_public_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:network-acl/acl-0acd9095a9c320dc1",
            "egress": [],
            "id": "acl-0acd9095a9c320dc1",
            "ingress": [],
            "owner_id": "414092415776",
            "subnet_ids": [],
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_sub_acl"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_sub_acl"
            },
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "demo1_private_sub_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0fd0b9a2badf5340d",
            "network_acl_id": "acl-045b256178e68b502",
            "subnet_id": "subnet-01d1c4670724412cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0587c2e675f91d72b",
            "network_acl_id": "acl-045b256178e68b502",
            "subnet_id": "subnet-067630acfe51e1e73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "demo1_public_sub_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-00849de6b4e5868b5",
            "network_acl_id": "acl-0acd9095a9c320dc1",
            "subnet_id": "subnet-0915bb8579d27228a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c77f05f20e6618d2",
            "network_acl_id": "acl-0acd9095a9c320dc1",
            "subnet_id": "subnet-077bcb9b8da525306"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_db_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": false,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1674786097",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-045b256178e68b502",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_http_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-181469212",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0acd9095a9c320dc1",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_https_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3611810201",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0acd9095a9c320dc1",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_jenkins_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "181.51.33.104/32",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "181.51.33.104/32",
            "egress": false,
            "from_port": 8080,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3072027858",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0acd9095a9c320dc1",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_ssh_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "181.51.33.104/32",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "181.51.33.104/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1787671895",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0acd9095a9c320dc1",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_out_db_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1042445884",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-045b256178e68b502",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_out_pub_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-987080111",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0acd9095a9c320dc1",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ec2_nic1_as1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:network-interface/eni-0eafb20fd35c2b24e",
            "attachment": [
              {
                "attachment_id": "eni-attach-060971bac837abe38",
                "device_index": 0,
                "instance": "i-07a0b4953d2f28d61"
              }
            ],
            "id": "eni-0eafb20fd35c2b24e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:09:c3:b7:82:af",
            "owner_id": "414092415776",
            "private_dns_name": "ip-10-0-0-100.ec2.internal",
            "private_ip": "10.0.0.100",
            "private_ip_list": [
              "10.0.0.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c0557425a96c9a1b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0915bb8579d27228a",
            "tags": {
              "Name": "ec2_nic1_as1"
            },
            "tags_all": {
              "Name": "ec2_nic1_as1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04fd1f45594c24173",
            "id": "r-rtb-040ae43845bac16be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040ae43845bac16be",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.demo1_igw",
            "aws_route_table.demo1_public_rt",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo1_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:route-table/rtb-0ee09c27c15124389",
            "id": "rtb-0ee09c27c15124389",
            "owner_id": "414092415776",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet1_rt"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet1_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:route-table/rtb-0d99a2acb451cbf74",
            "id": "rtb-0d99a2acb451cbf74",
            "owner_id": "414092415776",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet2_rt"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet2_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo1_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:route-table/rtb-040ae43845bac16be",
            "id": "rtb-040ae43845bac16be",
            "owner_id": "414092415776",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fd1f45594c24173",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_subnets__rt"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_subnets__rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo1_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a58de32b07e2fd21",
            "route_table_id": "rtb-0ee09c27c15124389",
            "subnet_id": "subnet-01d1c4670724412cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_private_rt",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0221021380da537b9",
            "route_table_id": "rtb-0d99a2acb451cbf74",
            "subnet_id": "subnet-067630acfe51e1e73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_private_rt",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo1_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0617f4d261500506c",
            "route_table_id": "rtb-040ae43845bac16be",
            "subnet_id": "subnet-0915bb8579d27228a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_public_rt",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4e9e87516440c2f",
            "route_table_id": "rtb-040ae43845bac16be",
            "subnet_id": "subnet-077bcb9b8da525306"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_public_rt",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo1_app_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group/sg-0c0557425a96c9a1b",
            "description": "Manage inbound and outbound traffic for the app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0557425a96c9a1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "181.51.33.104/32"
                ],
                "description": "Allow inbound HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "181.51.33.104/32"
                ],
                "description": "Allow inbound SSH from admins IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo1_app_server_sg",
            "name_prefix": "",
            "owner_id": "414092415776",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev"
            },
            "tags_all": {
              "Env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo1_cicd_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group/sg-02f9e21bf29af831d",
            "description": "Manage inbound and outbound traffic for the ci/cd servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f9e21bf29af831d",
            "ingress": [
              {
                "cidr_blocks": [
                  "181.51.33.104/32"
                ],
                "description": "Allow inbound HTTP from admins to access the jenkins dashboard",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "181.51.33.104/32"
                ],
                "description": "Allow inbound HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "181.51.33.104/32"
                ],
                "description": "Allow inbound SSH from admins IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo1_cicd_server_sg",
            "name_prefix": "",
            "owner_id": "414092415776",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev"
            },
            "tags_all": {
              "Env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo1_db_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group/sg-0278fdefc8f8610e2",
            "description": "Manage inbound and outbound traffic for the db servers",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound db traffic to app servers",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0557425a96c9a1b"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0278fdefc8f8610e2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound db traffic from app servers",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0557425a96c9a1b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "demo1_db_server_sg",
            "name_prefix": "",
            "owner_id": "414092415776",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev"
            },
            "tags_all": {
              "Env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:subnet/subnet-01d1c4670724412cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d1c4670724412cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414092415776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet1"
            },
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:subnet/subnet-067630acfe51e1e73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067630acfe51e1e73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414092415776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet2"
            },
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:subnet/subnet-0915bb8579d27228a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0915bb8579d27228a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414092415776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_subnet1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_subnet1"
            },
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:subnet/subnet-077bcb9b8da525306",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077bcb9b8da525306",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414092415776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_subnet2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_subnet2"
            },
            "vpc_id": "vpc-0650078b4f89744ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:vpc/vpc-0650078b4f89744ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-099cc02964fc0ba48",
            "default_route_table_id": "rtb-0625022377dd67676",
            "default_security_group_id": "sg-046007868010c374a",
            "dhcp_options_id": "dopt-0905042eb1ce7477e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0650078b4f89744ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0625022377dd67676",
            "owner_id": "414092415776",
            "tags": {
              "Env": "dev",
              "Name": "demo1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_out_app_server_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-0b9f5b54461fabe45",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic to anywhere",
            "from_port": -1,
            "id": "sgr-0b9f5b54461fabe45",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0557425a96c9a1b",
            "security_group_rule_id": "sgr-0b9f5b54461fabe45",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_out_cicd_server_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-0e2d7297eb19d34bf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic to anywhere",
            "from_port": -1,
            "id": "sgr-0e2d7297eb19d34bf",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02f9e21bf29af831d",
            "security_group_rule_id": "sgr-0e2d7297eb19d34bf",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_cicd_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_out_db_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-07b7c974815dd2b32",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow outbound db traffic to app servers",
            "from_port": 1024,
            "id": "sgr-07b7c974815dd2b32",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c0557425a96c9a1b",
            "security_group_id": "sg-0278fdefc8f8610e2",
            "security_group_rule_id": "sgr-07b7c974815dd2b32",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_db_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_db_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-0f641569b0f5d1f7a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow inbound db traffic from app servers",
            "from_port": 5432,
            "id": "sgr-0f641569b0f5d1f7a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c0557425a96c9a1b",
            "security_group_id": "sg-0278fdefc8f8610e2",
            "security_group_rule_id": "sgr-0f641569b0f5d1f7a",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_db_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_http_jenkins_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "181.51.33.104/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-061cb9890c077afa0",
            "cidr_ipv4": "181.51.33.104/32",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTP from admins to access the jenkins dashboard",
            "from_port": 8080,
            "id": "sgr-061cb9890c077afa0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02f9e21bf29af831d",
            "security_group_rule_id": "sgr-061cb9890c077afa0",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_cicd_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-042110741ef26fc66",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-042110741ef26fc66",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0557425a96c9a1b",
            "security_group_rule_id": "sgr-042110741ef26fc66",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_https_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app_server_181.51.33.104/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-05d5e56e84e36d527",
            "cidr_ipv4": "181.51.33.104/32",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTPS from anywhere",
            "from_port": 443,
            "id": "sgr-05d5e56e84e36d527",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0557425a96c9a1b",
            "security_group_rule_id": "sgr-05d5e56e84e36d527",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_cicd_server_sg",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "cicd_server_181.51.33.104/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-0622d53059c94d04a",
            "cidr_ipv4": "181.51.33.104/32",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTPS from anywhere",
            "from_port": 443,
            "id": "sgr-0622d53059c94d04a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02f9e21bf29af831d",
            "security_group_rule_id": "sgr-0622d53059c94d04a",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_cicd_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_ssh_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app_server_181.51.33.104/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-0be7e8c78b2cc7ec3",
            "cidr_ipv4": "181.51.33.104/32",
            "cidr_ipv6": null,
            "description": "Allow inbound SSH from admins IPs",
            "from_port": 22,
            "id": "sgr-0be7e8c78b2cc7ec3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0557425a96c9a1b",
            "security_group_rule_id": "sgr-0be7e8c78b2cc7ec3",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_cicd_server_sg",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "cicd_server_181.51.33.104/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-04c36e42acbf34888",
            "cidr_ipv4": "181.51.33.104/32",
            "cidr_ipv6": null,
            "description": "Allow inbound SSH from admins IPs",
            "from_port": 22,
            "id": "sgr-04c36e42acbf34888",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02f9e21bf29af831d",
            "security_group_rule_id": "sgr-04c36e42acbf34888",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_cicd_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    }
  ]
}